RESOLVED FIXED260559
[JSC] Throw OOM error if constructArrayNegativeIndexed() fails to allocate
https://bugs.webkit.org/show_bug.cgi?id=260559
Summary [JSC] Throw OOM error if constructArrayNegativeIndexed() fails to allocate
Alexey Shvayka
Reported 2023-08-22 16:52:52 PDT
It's confirmed that clients of constructArrayNegativeIndexed() can correctly handle an exception being thrown.
Attachments
Alexey Shvayka
Comment 1 2023-08-23 13:57:46 PDT
Alexey Shvayka
Comment 2 2023-08-23 13:58:09 PDT
EWS
Comment 3 2023-08-25 14:29:01 PDT
Committed 267300@main (ddd9cbc5f5a7): <https://commits.webkit.org/267300@main> Reviewed commits have been landed. Closing PR #16988 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.