Cherry-pick ddd9cbc5f5a7. rdar://114202373

[JSC] Throw OOM error if constructArrayNegativeIndexed() fails to allocate
    https://bugs.webkit.org/show_bug.cgi?id=260559
    <rdar://114202373>

    Reviewed by Mark Lam.

    This change leverages AllocationFailureMode to throw an OOM error if constructArrayNegativeIndexed()
    fails to allocate an array, which does happen in the wild (iOS apps).

    All clients of constructArrayNegativeIndexed() were updated to correctly handle thrown exception.

    * Source/JavaScriptCore/runtime/JSArray.cpp:
    (JSC::constructArray):
    (JSC::constructArrayNegativeIndexed):
    * Source/JavaScriptCore/runtime/JSGlobalObjectInlines.h:
    (JSC::constructArrayNegativeIndexed):

    Canonical link: https://commits.webkit.org/267300@main

Identifier: 265870.490@safari-7616-branch